# vesuvius-segment-triage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: copy-template.mjs  make-gif.mjs
frontend/src/: App.tsx  data.ts  filters.test.ts  filters.ts  types.ts
segment_triage/: __init__.py  cli.py  config.py  crawl.py  filters.py  fixtures.py  model.py  report.py  summary.py
segment_triage/web/: template.html
tests/: filter_cases.json  test_crawl.py  test_filters.py  test_report.py
