[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vesuvius-segment-triage"
version = "0.1.0"
description = "A cross-segment review-status triage dashboard for Vesuvius Challenge VC3D .volpkg surfaces."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Aakash Kapoor" }]
keywords = ["vesuvius", "scrollprize", "volume-cartographer", "vc3d", "segmentation", "triage"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
# Intentionally tiny: local mode is stdlib-only; `requests` is only used for the
# optional remote (http mirror) mode. No heavy data/ML deps -> trivial to install.
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/MAV-HUB/vesuvius-segment-triage"
Issues = "https://github.com/MAV-HUB/vesuvius-segment-triage/issues"

[project.scripts]
segment-triage = "segment_triage.cli:main"

[tool.setuptools]
packages = ["segment_triage"]

[tool.setuptools.package-data]
segment_triage = ["web/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
