[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vesuvius-segment-triage"
version = "0.1.0"
description = "A cross-segment review-status triage dashboard for Vesuvius Challenge VC3D .volpkg surfaces."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Aakash Kapoor" }]
keywords = ["vesuvius", "scrollprize", "volume-cartographer", "vc3d", "segmentation", "triage"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# Zero third-party deps for the local/demo path the README leads with. `requests`
# is only needed for the optional remote (http mirror) mode -> the `remote` extra.
dependencies = []

[project.optional-dependencies]
remote = ["requests>=2.28"]
dev = ["pytest>=8.0", "requests>=2.28"]

[project.urls]
Homepage = "https://github.com/VECTRION-HQ/vesuvius-segment-triage"
Issues = "https://github.com/VECTRION-HQ/vesuvius-segment-triage/issues"

[project.scripts]
segment-triage = "segment_triage.cli:main"

[tool.setuptools]
packages = ["segment_triage"]

[tool.setuptools.package-data]
segment_triage = ["web/*.html", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
